@@ -8,4 +8,5 @@
     <string id="30105">IT</string>
     <string id="30106">Karriere</string>
     <string id="30107">Weekend</string>
+    <string id="30108">Investor 1000</string>
 </strings>
