@@ -1,3 +1,6 @@
+[B]Version 1.0.3 - 2012-10-03[/B]
+- Changed addon to use RSS feeds to greatly simplify the codebase
+
 [B]Version 1.0.2 - 2012-09-09[/B]
 - Updated to match site changes
 - Changed video streams to use M3U8 links
